# copilot-cpp-exercise

./: .gitignore  CMakeLists.txt  README.md  copilot-exercises.md
docs/specs/: architecture.md  project_specs.md
include/: log_entry.h  log_filter.h  log_parser.h  log_reporter.h  utils.h
src/: log_entry.cpp  log_filter.cpp  log_parser.cpp  log_reporter.cpp  main.cpp  utils.cpp
